--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -83,9 +83,32 @@
 		</div>
 	    <% end %>
 	<% end %>
+	<div class='class-year'>
+	    <div class="container page-content">
+		<div class='row'>
+		    <div class='col-md-9'>
+			<p>		    <strong>The 2021 BSSw Fellowship is sponsored by the U.S. Department of Energy and National Science Foundation.</strong>
+			</p>
+		    </div>
+		    <div class='fellow'>
+
+		    <div class='col'>
+
+			<div class="img_div">
+			    <img src="https://res.cloudinary.com/bssw/image/fetch/w_200,h_200,c_fit/https://github.com/betterscientificsoftware/images/raw/master/Logo_DOE_Unofficial_Sm.png" class="logo"> 
+			</div>  
+
+			<div class="img_div">
+			    <img src="https://res.cloudinary.com/bssw/image/fetch/w_200,h_200,c_fit/https://github.com/betterscientificsoftware/images/raw/master/Logo_NSF_4ColorB_Sm.png" class="logo"> 
+			</div>  
+
+		    </div>
+		</div>
+	    </div>
+	</div>
+    </div>
 
 	
-    </div>
 
 <% elsif @page.home? %>
 
