--- a/app/views/fellows/show.html.erb
+++ b/app/views/fellows/show.html.erb
@@ -18,7 +18,7 @@
 	  <div class='row'>
 	    <div class='col-xl-3 col-lg-3 col-md-5 col-sm-12 col-12'>
 	      <% if @fellow.image_path %>
-		         <%= cl_image_tag(@fellow.modified_path + "?raw=true", :type => :fetch, :invalidate => true, :cloud_name => 'bssw', :class => 'fellows-photo') %>
+		         <%= cl_image_tag(@fellow.modified_path, :type => :fetch, :invalidate => true, :cloud_name => 'bssw', :class => 'fellows-photo') %>
 
 							<% end %>
 						</div>
