--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -87,7 +87,7 @@
 	    <div class="container page-content">
 		<div class='row'>
 		    <div class='col-md-9'>
-			<p>		    <strong>The 2021 BSSw Fellowship is sponsored by the U.S. Department of Energy and National Science Foundation.</strong>
+			<p>		    <strong>The BSSw Fellowship is sponsored by the U.S. Department of Energy and National Science Foundation.</strong>
 			</p>
 		    </div>
 		    <div class='fellow'>
