routes and paths

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -37,7 +37,7 @@
         <ul class="caret-list">
           <li><a href="/pages/bssw-fellowship-program">BSSw Fellowship Program</a></li>
           <li><a href="/pages/policies">Policies</a></li>
-          <li><a href="/resources/authors">Site Contributors</a></li>
+          <li><a href="/items/authors">Site Contributors</a></li>
         </ul>
       </div>
       <% if (@resource || @resources) && (!@event && !@post) %>
