--- a/app/views/contributes/_new.html.erb
+++ b/app/views/contributes/_new.html.erb
@@ -20,7 +20,7 @@
 				<div class='col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12'>
 		  			<%= f.input :name, :required => true, :label => "Full Name" %>
 		  			<%= f.input :email, :required => true %>
-		  			<%= invisible_recaptcha %>
+		  			<%= invisible_captcha %>
 		  			<div style="clear:both;"></div>
 				</div>
 	      	</div>
