--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -48,16 +48,18 @@
 
 				    </strong>
 
-
-				    <span class="small-caps">                     
-					<div class="topics-wrapper">
-
-					    <%= author_list(@post) %>
-					</div>
-				    </span>
-
 				</div>
 			    </div>
+			    <div class="col-xl-6">
+				<span class="small-caps">                     
+				    <div class="topics-wrapper">
+
+					<%= author_list(@post) %>
+				    </div>
+				</span>
+
+			    </div>
+
 			</div>
 			<div class="col-xl-6">
 			    <%= render :partial => '/resources/topics', :locals => {:resource => @post } %>
@@ -67,10 +69,8 @@
 
 	    </div>
 	</div>
-
-
-
     </div>
+
 </div>
 </div>
 
