--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -44,19 +44,12 @@
 			    <div class="col-xl-6">
 				<div class="small-caps">
 				    <strong>
-					<%= "Author".pluralize(@post.authors.count) %>
+					<%= "Author".pluralize(@post.authors.count) %></strong>
 
-				    </strong>
-
-				</div>
-			    </div>
-			    <div class="col-xl-6">
-				<span class="small-caps">                     
-				    <div class="topics-wrapper">
 
 					<%= author_list(@post) %>
-				    </div>
-				</span>
+
+
 
 			    </div>
 
