--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -42,24 +42,26 @@
 				<div class="small-caps"><strong>Published</strong><%= @post.published_at.try(:strftime, "%b %d, %Y") %></div>
 			    </div>
 			</div>
-			<div class="col-xl-6">
-			    <div class="small-caps">
-				<strong>
-				    <%= "Author".pluralize(@post.authors.count) %></strong>
-				<%= author_list(@post) %>
-				
-				
-				
-			    </div>
-			    
-			</div>
-			<div class="col-xl-6">
-			    <%= render :partial => '/resources/topics', :locals => {:resource => @post } %>
+		    </div>
+		    <div class="col-xl-6">
+			<div class="row">
+			    <div class="col-xl-6">
+				<div class="small-caps">
+				    <strong>
+					<%= "Author".pluralize(@post.authors.count) %></strong>
+				    <%= author_list(@post) %>
+				    
+				</div>
+			    </div>			    
 			</div>
 		    </div>
+		    <div class="col-xl-6">
+			<%= render :partial => '/resources/topics', :locals => {:resource => @post } %>
+		    </div>
 		</div>
-
 	    </div>
+	    
+	
 	</div>
 
     </div>
