--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -54,29 +54,26 @@
 
 
 			<% if @page.name.match("About") %>
-			    <%= page.main.split('<h2>Partners</h2>').first.html_safe %>
-			    <style>
-			     .page-content {
-				 padding-bottom: 8px;
-			     }
-			    </style>
-			    <div class="limiter">
-				<div class="container">
+		    </div>
 
-				    <% Staff.displayed.order('title desc').group_by(&:section).each do |section, staff| %>
-					<h3 class="mb-3"><%= section %></h3>
-					<div class="row">
-					    <% staff.each do |author| %>
-						<%= render 'resources/author', :author => author %>
-					    <% end %>
-					</div>
+		    <%= page.main.split('<h2>Partners</h2>').first.html_safe %>
+		    <div class="limiter">
+			<div class="container">
 
+			    <% Staff.displayed.order('title desc last_name desc').group_by(&:section).each do |section, staff| %>
+				<h3 class="mb-3"><%= section %></h3>
+				<div class="row">
+				    <% staff.each do |author| %>
+					<%= render 'resources/author', :author => author %>
+				    <% end %>
 				</div>
-				    <% end  %>
-				    <h2>Partners</h2>
-				    <%= page.main.split('<h2>Partners</h2>').last.html_safe %>
+
+			</div>
+			    <% end  %>
+			    <h2>Partners</h2>
+			    <%= page.main.split('<h2>Partners</h2>').last.html_safe %>
 			<% else %>
-				    <%= page.main %>
+			    <%= page.main %>
 			<% end %>
 
 			<% if page.name.match("Email") %>
@@ -84,11 +81,11 @@
 			<% end %>
 
 
-			    </div>
 		    </div>
 		</div>
 	    </div>
 	</div>
+    </div>
 
 
 <% end %>
