--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -56,7 +56,8 @@
 			<% if @page.name.match("About") %>
 
 
-		    <%= page.main.split('<h2>Partners</h2>').first.html_safe %>
+			    <%= page.main.split('<h2>Partners</h2>').first.html_safe %>
+		    </div>
 		    <div class="limiter">
 
 			    <% Staff.displayed.order('title desc, last_name desc').group_by(&:section).each do |section, staff| %>
@@ -69,8 +70,10 @@
 
 			</div>
 			    <% end  %>
+			    <div class="page-content">
 			    <h2>Partners</h2>
 			    <%= page.main.split('<h2>Partners</h2>').last.html_safe %>
+			    </div>
 			<% else %>
 			    <%= page.main %>
 			<% end %>
