--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -60,6 +60,8 @@
 		    </div>
 		</div>
 	    </div>
+	</div>
+    </div>
 		    <div class="limiter">
 
 			    <% Staff.displayed.order('title desc, last_name desc').group_by(&:section).each do |section, staff| %>
