--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -62,6 +62,7 @@
 	    </div>
 	</div>
     </div>
+    <div class="container">
 		    <div class="limiter">
 
 			    <% Staff.displayed.order('title desc, last_name desc').group_by(&:section).each do |section, staff| %>
