--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -37,8 +37,10 @@
                   </div>
                   <div class="col-xl-9 col-lg-9 col-md-6 col-sm-6 col-6">
                     <h3 class="small-caps">
-                      <strong><%= "Author".pluralize(@resource.authors.count) %></strong><%= author_list(@resource) %>
-
+                      <% if @resource.authors.empty? %>
+<strong>Contributed by BSSW Community</strong>
+<% else %>
+                      <strong><%= "Contributor".pluralize(@resource.authors.count) %></strong><%= author_list(@resource) %>
                       <% end %>
                     </h3>
                     </div>
