--- a/app/views/resources/_search_result.html.erb
+++ b/app/views/resources/_search_result.html.erb
@@ -20,7 +20,7 @@
 				<% [:author_list_without_links, :location, :organizers].each do |facet| %>
 				    <% if result.respond_to?(facet) %>
 					<p class='small-caps'>
-					    <%=  highlight(ActionController::Base.helpers(result.try(facet)), @search.flatten) %>
+					    <%=  highlight((result.try(facet)), @search.flatten) %>
 					</p>
 				    <% end %>
 				<% end %>
