--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
       <span aria-hidden="true">&times;</span>
       <span class="sr-only">Close</span>
     </button>
-      <p>YOU ARE VIEWING THE PREVIEW SITE</p>
+      YOU ARE VIEWING THE PREVIEW SITE
   </div>
   <% end %>
 
@@ -80,7 +80,7 @@
       <span aria-hidden="true">&times;</span>
       <span class="sr-only">Close</span>
     </button>
-      <p>You are seeing the <strong><%= RebuildStatus.code_branch %></strong> code branch and the <%= RebuildStatus.content_branch %> content branch.</p>
+      You are seeing the <strong><%= RebuildStatus.code_branch %></strong> code branch and the <%= RebuildStatus.content_branch %> content branch.
   </div>
   <% end %>
 
