--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
   <%= render 'layouts/flash' %>
 
   <% if session[:preview] %>
-  <div class='alert alert-danger alert-dismissable' role="alert">
+  <div class='alert alert-warning alert-dismissable' role="alert">
     <button type="button" class="close" data-dismiss="alert">
       <span aria-hidden="true">&times;</span>
       <span class="sr-only">Close</span>
@@ -75,7 +75,7 @@
   <% end %>
 
   <% unless Rails.env == 'production' %>
-  <div class='alert alert-danger alert-dismissable' role="alert">
+  <div class='alert alert-warning alert-dismissable' role="alert">
     <button type="button" class="close" data-dismiss="alert">
       <span aria-hidden="true">&times;</span>
       <span class="sr-only">Close</span>
