--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -60,12 +60,11 @@
 		    </div>
 		</div>
 	    </div>
-	</div>
-    </div>
     <div class="container">
+
 		    <div class="limiter">
 
-			    <% Staff.displayed.order('title desc, last_name desc').group_by(&:section).each do |section, staff| %>
+			    <% Staff.displayed.order('title desc, last_name asc').group_by(&:section).each do |section, staff| %>
 				<h3 class="mb-3"><%= section %></h3>
 				<div class="row">
 				    <% staff.each do |author| %>
@@ -76,10 +75,12 @@
 
 			    <% end  %>
 		    </div>
-		    <div class="page-content">
+
 			    <h2>Partners</h2>
 			    <%= page.main.split('<h2>Partners</h2>').last.html_safe %>
 		    </div>
+	</div>
+    </div>
 		    
 			<% else %>
 			    <%= page.main %>
