--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4150,3 +4150,18 @@ tr.displayed { background: #07650e; font-weight: bold;  color: #f9f2f4;
 }
 
 .alert { margin-bottom: 0 !important; }
+
+
+
+.team .offsite a {
+
+font-weight: normal;
+
+font-size: 1em;
+
+line-height: 1em;
+
+margin-top: .5em;
+
+margin-bottom: .5em;
+}
