--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -63,7 +63,7 @@
     </div>
     <div class="container mt-2">
 
-		    <div class="limiter">
+		    <div class="limiter team">
 
 			    <% Staff.displayed.order('title desc, last_name asc').group_by(&:section).each do |section, staff| %>
 				<h3 class="mb-3"><%= section %></h3>
