--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -53,7 +53,7 @@
 
 
 
-			<% if @page.name.match("About") %>
+			<% if @page.name == ("About") %>
 
 
 			    <%= page.main.split('<h2>Partners</h2>').first.html_safe %>
