--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -133,7 +133,8 @@
             <div class="dropdown-menu dropdown-menu-bottom" aria-labelledby="dropdown3">
 
               <ul class="caret-list">
-                <li><a href="/pages/about">Team</a></li>
+                <li><a href="/pages/site-overview">Site Overview</a></li>
+                <li><a href="/pages/team">Team</a></li>
                 <li><a href="/pages/policies">Policies and Code of Conduct</a></li>
                 <li><a href="/pages/bssw-fellowship-program">BSSw Fellowship Program</a></li>
               </ul> 
