--- a/app/views/resources/authors.html.erb
+++ b/app/views/resources/authors.html.erb
@@ -7,7 +7,7 @@
 				<% @authors.each do |author| %>
 
 
-				<% if author.blog_count(session[:preview]) > 0 || author.resource_count(session[:preview]) > 0 || author.event_count(session[:preview]) > 0 %>
+				<% if author.blog_count(preview: session[:preview]) > 0 || author.resource_count(preview: session[:preview]) > 0 || author.event_count(preview: session[:preview]) > 0 %>
 			
 
 					<%= render 'resources/author', :author => author %>
