--- a/app/views/resources/_author.html.erb
+++ b/app/views/resources/_author.html.erb
@@ -37,7 +37,7 @@
   <% end %>
 
   <% if author.website %>
-    <p class="offsite"><%= link_to "Github", "https://github.com/" + author.website %> </p>
+    <p class="offsite"><%= link_to "Github", author.website %> </p>
   <% end %>
 
 
