--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -69,11 +69,11 @@
 				<div class='col'>
 
 				    <div class="img_div">
-					<img src="https://res.cloudinary.com/bssw/image/fetch/w_200,h_200,c_fit/https://github.com/betterscientificsoftware/images/raw/master/Logo_DOE_Unofficial_Sm.png" class="logo"> 
+					<img src="https://res.cloudinary.com/bssw/image/fetch/w_200,h_200,c_fit/https://github.com/betterscientificsoftware/bssw.io/raw/master/images/Logo_DOE_Unofficial_Sm.png" class="logo"> 
 				    </div>  
 
 				    <div class="img_div">
-					<img src="https://res.cloudinary.com/bssw/image/fetch/w_200,h_200,c_fit/https://github.com/betterscientificsoftware/images/raw/master/Logo_NSF_4ColorB_Sm.png" class="logo"> 
+					<img src="https://res.cloudinary.com/bssw/image/fetch/w_200,h_200,c_fit/https://github.com/betterscientificsoftware/bssw.io/raw/master/images/Logo_NSF_4ColorB_Sm.png" class="logo"> 
 				    </div>  
 
 				</div>
