--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,7 +3,7 @@
 	<div class="sidebar-inner">
 	    <h3>Resources by Topic</h3>
 	    <div class="accordion panel-group" id="accordionSidebar" role='tablist'>
-		<% Category.displayed.each_with_index do |category, index| 
+		<% Category.displayed.includes([:topics]).each_with_index do |category, index| 
 		cat = category.name.split(' ') %>
 		<div class="card panel">
 		    <div class="card-header" id="heading-<%= index %>" >
