--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -15,7 +15,7 @@
 		<div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
 		    <div class='content <% if page.slug == 'communities-overview' %>communities-overview<% end %>'>
 			<% if @page.name == ("Team") %>
-			    <%= render 'pages/team' %>
+			    <%= render 'pages/team', page: @page %>
 			<% else %>
 			    <%= page.main %>
 			<% end %>
