--- a/app/views/pages/_team.html.erb
+++ b/app/views/pages/_team.html.erb
@@ -1,4 +1,4 @@
-<%= page.main.split('<h2>Partners</h2>').first.html_safe %>
+<%= @page.main.split('<h2>Partners</h2>').first.html_safe %>
 		    </div>
 		    </div>
 		    </div>
@@ -20,7 +20,7 @@
 			</div>
 
 			<h2>Partners</h2>
-			<%= page.main.split('<h2>Partners</h2>').last.html_safe %>
+			<%= @page.main.split('<h2>Partners</h2>').last.html_safe %>
 		    </div>
 		    </div>
 
