--- a/app/views/resources/_author_hero.html.erb
+++ b/app/views/resources/_author_hero.html.erb
@@ -29,7 +29,7 @@
 		    <div class="fellows-info-inner">
 			
 			<% if @author.website %>
-			    <p class="offsite mt-0"><%= link_to 'GitHub',  ("https://github.com/" + @author.website).html_safe  %></p>
+			    <p class="offsite mt-0"><%= link_to 'GitHub', @author.website  %></p>
 			<% end %>
 			
 			
