--- a/app/views/resources/_author.html.erb
+++ b/app/views/resources/_author.html.erb
@@ -5,7 +5,7 @@
 	    <%= cl_image_tag(author.avatar_url,
 			     :type => :fetch, :width => 350, :height => 350, :invalidate => true, :cloud_name => 'bssw') %>
 	<% else %>
-	    <img  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mO0sXGoBwACrQE5MbOwdAAAAABJRU5ErkJggg=="/>
+<img src="https://raw.githubusercontent.com/betterscientificsoftware/bssw.io/master/images/People_BSSwContributor.png" />
 
   <% end %>
 
