--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,12 @@
   <meta name="msapplication-square150x150logo" content="../assets/mstile-150x150.png" />
   <meta name="msapplication-wide310x150logo" content="../assets/mstile-310x150.png" />
   <meta name="msapplication-square310x310logo" content="../assets/mstile-310x310.png" />
+
+<meta name="twitter:title" content="<%= social_title %>">
+<meta name="twitter:description" content="<%= social_description %>">
+<meta property="og:title" content="<%= social_title %>">
+<meta property="og:description" content="<%= social_description %>">
+<meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
   <div id="top"></div>
