image for social

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,7 @@
 <meta name="twitter:description" content="<%= social_description %>">
 <meta property="og:title" content="<%= social_title %>">
 <meta property="og:description" content="<%= social_description %>">
+<meta property="og:image" content="<%= image_url('bssw.png') %>">
 <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
