--- a/app/views/resources/_author.html.erb
+++ b/app/views/resources/_author.html.erb
@@ -30,7 +30,8 @@
 	<% end %>
 
 	<% if author.website %>
-	    <p class="offsite"><%= link_to "Github", author.website %></p>
+			    <p class="offsite mt-0"><%= link_to 'GitHub',  ("https://github.com/" + @author.website).html_safe  %></p>
+
 	<% end %>
 
 
