--- a/app/views/resources/_author.html.erb
+++ b/app/views/resources/_author.html.erb
@@ -4,6 +4,8 @@
 	<% if author.avatar_url %>
 	    <%= cl_image_tag(author.avatar_url,
 			     :type => :fetch, :width => 350, :height => 350, :invalidate => true, :cloud_name => 'bssw') %>
+	<% else %>
+<img src="https://raw.githubusercontent.com/betterscientificsoftware/bssw.io/master/images/People_BSSwContributor.png" />
 
 	<% end %>
 
