--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,8 +68,10 @@
 
 <% if social_image.blank? %>
 <meta property="og:image" content="<%= image_url('bssw.png') %>">
+<meta name="twitter:image" content="<%= image_url('bssw.png') %>">
 <% else %>
 <meta property="og:image" content="<%= social_image %>">
+<meta name="twitter:image" content="<%= social_image %>">
 <% end %>
 
 
