--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,192 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title><%= social_title.blank? ? "Better Scientific Software" : social_title %></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><!-- Bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <%= csrf_meta_tags %>
+    <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title><%= social_title.blank? ? "Better Scientific Software" : social_title %></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><!-- Bootstrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<%= csrf_meta_tags %>
 
 
-  <%= stylesheet_link_tag "application", :media => "all" %>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <%= javascript_include_tag 'application' %>
-  <%= auto_discovery_link_tag :rss, site_items_url(:format => :rss) %>
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// --><!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-  <![endif]-->
+	<%= stylesheet_link_tag "application", :media => "all" %>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<%= javascript_include_tag 'application' %>
+	<%= auto_discovery_link_tag :rss, site_items_url(:format => :rss) %>
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// --><!--[if lt IE 9]>
+										      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+										      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+										  <![endif]-->
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 
-  <img src="/assets/bss-logo.svg" style="display:none;">
-  <img src="/assets/bss-logo-hover.svg" style="display:none;">
-  
-  <!-- preloading a few select images so hovers won't glitch -->
-  <link rel="preload" as="image" href="/assets/bss-logo.svg">
-  <link rel="preload" as="image" href="/assets/bss-logo-hover.svg">
-  <link rel="preload" as="image" href="/assets/chevron-right-indigo.svg">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/assets/apple-touch-icon-60x60.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/apple-touch-icon-76x76.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="/assets/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="/assets/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="/assets/favicon-128.png" sizes="128x128" />
-  <link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
-
-
-  <meta name="application-name" content="&nbsp;"/>
-  <meta name="msapplication-TileColor" content="#FFFFFF" />
-  <meta name="msapplication-TileImage" content="../assets/mstile-144x144.png" />
-  <meta name="msapplication-square70x70logo" content="../assets/mstile-70x70.png" />
-  <meta name="msapplication-square150x150logo" content="../assets/mstile-150x150.png" />
-  <meta name="msapplication-wide310x150logo" content="../assets/mstile-310x150.png" />
-  <meta name="msapplication-square310x310logo" content="../assets/mstile-310x310.png" />
-
-<meta name="twitter:title" content="<%= social_title %>">
-<meta name="twitter:description" content="<%= social_description %>">
-<meta property="og:title" content="<%= social_title %>">
-<meta property="og:description" content="<%= social_description %>">
-
-<meta property="og:url" content="<%= request.url %>">
-<meta name="twitter:card" content="summary_large_image">
-
-<% if social_image.blank? %>
-<meta property="og:image" content="<%= image_url('bssw.png') %>">
-<meta name="twitter:image" content="<%= image_url('bssw.png') %>">
-<% else %>
-<meta property="og:image" content="<%= social_image %>">
-<meta name="twitter:image" content="<%= social_image %>">
-<% end %>
+	<img src="/assets/bss-logo.svg" style="display:none;">
+	<img src="/assets/bss-logo-hover.svg" style="display:none;">
+	
+	<!-- preloading a few select images so hovers won't glitch -->
+	<link rel="preload" as="image" href="/assets/bss-logo.svg">
+	<link rel="preload" as="image" href="/assets/bss-logo-hover.svg">
+	<link rel="preload" as="image" href="/assets/chevron-right-indigo.svg">
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="/assets/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="/assets/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="/assets/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="/assets/favicon-128.png" sizes="128x128" />
+	<link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
 
 
-</head>
-<body>
-  <div id="top"></div>
+	<meta name="application-name" content="&nbsp;"/>
+	<meta name="msapplication-TileColor" content="#FFFFFF" />
+	<meta name="msapplication-TileImage" content="../assets/mstile-144x144.png" />
+	<meta name="msapplication-square70x70logo" content="../assets/mstile-70x70.png" />
+	<meta name="msapplication-square150x150logo" content="../assets/mstile-150x150.png" />
+	<meta name="msapplication-wide310x150logo" content="../assets/mstile-310x150.png" />
+	<meta name="msapplication-square310x310logo" content="../assets/mstile-310x310.png" />
 
-  <%= render 'layouts/navbar', :search => @search, :page => @page %>
-  <%= render 'layouts/flash' %>
+	<meta name="twitter:title" content="<%= social_title %>" />
+	<meta name="twitter:description" content="<%= social_description %>" />
+	<meta property="og:title" content="<%= social_title %>" />
+	<meta property="og:description" content="<%= social_description %>" /> 
 
-  <% if session[:preview] %>
-  <div class='alert alert-warning alert-dismissable' role="alert">
-    <button type="button" class="close" data-dismiss="alert">
-      <span aria-hidden="true">&times;</span>
-      <span class="sr-only">Close</span>
-    </button>
-      YOU ARE VIEWING THE PREVIEW SITE
-  </div>
-  <% end %>
+	<meta property="og:url" content="<%= request.url %>" />
+	<meta name="twitter:card" content="summary_large_image" />
 
-  <% unless Rails.env == 'production' %>
-  <div class='alert alert-warning alert-dismissable' role="alert">
-    <button type="button" class="close" data-dismiss="alert">
-      <span aria-hidden="true">&times;</span>
-      <span class="sr-only">Close</span>
-    </button>
-      You are seeing the <strong><%= RebuildStatus.code_branch %></strong> code branch and the <strong><%= RebuildStatus.content_branch %></strong> content branch.
-  </div>
-  <% end %>
+	<% if social_image.blank? %>
+	    <meta property="og:image" content="<%= image_url('bssw.png') %>" />
+	    <meta name="twitter:image" content="<%= image_url('bssw.png') %>" />
+	<% else %>
+	    <meta property="og:image" content="<%= social_image %>" />
+	    <meta name="twitter:image" content="<%= social_image %>" />
+	<% end %>
 
 
-  <% if @announcement && @announcement.site_item %>
+    </head>
+    <body>
+	<div id="top"></div>
 
-  <div class="announcement" id="announcement">
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-11 col-lg-11 col-md-11 col-sm-11 col-11">
+	<%= render 'layouts/navbar', :search => @search, :page => @page %>
+	<%= render 'layouts/flash' %>
 
-         <%= link_to @announcement.text, site_item_path(@announcement.site_item) %>
+	<% if session[:preview] %>
+	    <div class='alert alert-warning alert-dismissable' role="alert">
+		<button type="button" class="close" data-dismiss="alert">
+		    <span aria-hidden="true">&times;</span>
+		    <span class="sr-only">Close</span>
+		</button>
+		YOU ARE VIEWING THE PREVIEW SITE
+	    </div>
+	<% end %>
 
-       </div>
-       <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1">
-        <button class="announcements-close" id="close" aria-label="Close" onClick="cookieHide();"><i class="fa fa-times" aria-hidden="true"></i></button>
-      </div>
-    </div>
-  </div>
-</div> 
-<% end %>
+	<% unless Rails.env == 'production' %>
+	    <div class='alert alert-warning alert-dismissable' role="alert">
+		<button type="button" class="close" data-dismiss="alert">
+		    <span aria-hidden="true">&times;</span>
+		    <span class="sr-only">Close</span>
+		</button>
+		You are seeing the <strong><%= RebuildStatus.code_branch %></strong> code branch and the <strong><%= RebuildStatus.content_branch %></strong> content branch.
+	    </div>
+	<% end %>
 
 
+	<% if @announcement && @announcement.site_item %>
+
+	    <div class="announcement" id="announcement">
+		<div class="container">
+		    <div class="row">
+			<div class="col-xl-11 col-lg-11 col-md-11 col-sm-11 col-11">
+
+			    <%= link_to @announcement.text, site_item_path(@announcement.site_item) %>
+
+			</div>
+			<div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1">
+			    <button class="announcements-close" id="close" aria-label="Close" onClick="cookieHide();"><i class="fa fa-times" aria-hidden="true"></i></button>
+			</div>
+		    </div>
+		</div>
+	    </div> 
+	<% end %>
 
 
 
-<%= yield %>
-
-<%= render 'layouts/footer', :quote => @quote %>
-
-<% if Rails.env == 'production' && controller.action_name != 'import' %>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108721014-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-108721014-1');
-</script>
-<% end %>
-
-<% if controller.action_name == 'show' && controller.controller_name == 'blog_posts' %>
-<script id="dsq-count-scr" src="//better-scientific-software.disqus.com/count.js" async></script>
-<% end %>
 
 
-<!-- Owl Slider -->
-<script>
-  $(document).ready(function(){
-    $(".owl-carousel").owlCarousel({
-      nav:true,
-      animateOut: 'fadeOut',
-      animateIn: 'flipInX',
-      items:1,
-      smartSpeed:12,
-      loop:true
-    });
-  });
-</script>
+	<%= yield %>
+
+	<%= render 'layouts/footer', :quote => @quote %>
+
+	<% if Rails.env == 'production' && controller.action_name != 'import' %>
+	    <!-- Global site tag (gtag.js) - Google Analytics -->
+	    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108721014-1"></script>
+	    <script>
+	     window.dataLayer = window.dataLayer || [];
+	     function gtag(){dataLayer.push(arguments);}
+	     gtag('js', new Date());
+
+	     gtag('config', 'UA-108721014-1');
+	    </script>
+	<% end %>
+
+	<% if controller.action_name == 'show' && controller.controller_name == 'blog_posts' %>
+	    <script id="dsq-count-scr" src="//better-scientific-software.disqus.com/count.js" async></script>
+	<% end %>
 
 
-<script>
-// When the user scrolls the page, execute myFunction 
-window.onscroll = function() {myFunction()};
-
-// Get the navbar
-var navbar = document.getElementById("sidebar");
-
-if (navbar) {
-//Get the offset position of the navbar
-var sticky = navbar.offsetTop;
-}
-
-// Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
-function myFunction() {
-  if (window.pageYOffset >= '270') {
-    navbar.classList.add("sticky")
-  } else {
-    navbar.classList.remove("sticky");
-  }
-
-  if (window.pageYOffset <= sticky) {
-    navbar.classList.remove("sticky")
-			   }
-}
-</script>
+	<!-- Owl Slider -->
+	<script>
+	 $(document).ready(function(){
+	     $(".owl-carousel").owlCarousel({
+		 nav:true,
+		 animateOut: 'fadeOut',
+		 animateIn: 'flipInX',
+		 items:1,
+		 smartSpeed:12,
+		 loop:true
+	     });
+	 });
+	</script>
 
 
-</body>
+	<script>
+	 // When the user scrolls the page, execute myFunction 
+	 window.onscroll = function() {myFunction()};
+
+	 // Get the navbar
+	 var navbar = document.getElementById("sidebar");
+
+	 if (navbar) {
+	     //Get the offset position of the navbar
+	     var sticky = navbar.offsetTop;
+	 }
+
+	 // Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+	 function myFunction() {
+	     if (window.pageYOffset >= '270') {
+		 navbar.classList.add("sticky")
+	     } else {
+		 navbar.classList.remove("sticky");
+	     }
+
+	     if (window.pageYOffset <= sticky) {
+		 navbar.classList.remove("sticky")
+	     }
+	 }
+	</script>
+
+
+    </body>
 </html>
