--- a/app/views/pages/_team.html.erb
+++ b/app/views/pages/_team.html.erb
@@ -4,7 +4,7 @@
 		    </div>
 		    </div>
 		    <div class="container mt-2">
-
+<h2>BSSw Editorial Team</h2>
 			<div class="limiter team">
 
 			    <% Staff.displayed.order('title desc, last_name asc').group_by(&:section).each do |section, staff| %>
