--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,7 +31,7 @@
        <div class="row details-row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
           <h3 class='small-caps'>
-            <strong>Date</strong><%= show_dates(@event) %></h3>
+            <%= show_dates(@event) %></h3>
           </div>
           <% if @event.location %>
           <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
