--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -9,7 +9,7 @@
           <h3><%= event.name %></h3>
         </div>
         <div class="col-xl-4 order-xl-first col-lg-4 order-lg-first col-md-12 col-sm-12 col-12">
-          <h3><%= show_date(event) %></h3>
+          <p class="small-caps date"><%= show_date(event) %></p>
         </div>
       </div>
       <div class="row">
