--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,7 +99,7 @@
 		    <span aria-hidden="true">&times;</span>
 		    <span class="sr-only">Close</span>
 		</button>
-		You are seeing the <strong><%= RebuildStatus.code_branch %></strong> code branch and the <strong><%= RebuildStatus.content_branch %></strong> content branch.
+		You are seeing the <strong><%= RebuildStatus.code_branch %></strong> code branch and the <strong><%= RebuildStatus.content_branch %></strong> content branch (revision <strong><%= RebuildStatus.commit_hash %></strong>)
 	    </div>
 	<% end %>
 
