--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -9,8 +9,8 @@
 			<h3><%= date.event.name %></h3>
 		    </div>
 		    <div class="col-xl-4 order-xl-first col-lg-4 order-lg-first col-md-12 col-sm-12 col-12">
-			<h3><%= date.additional_date.label %></h3>
-			<p class="small-caps date"><%= show_date(date) %></p>
+			<h3><%= show_date(date) %></h3>
+			<p class="small-caps date"><%= show_label(date) %></p>
 		    </div>
 
 		</div>
