--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3043,6 +3043,9 @@ EVENTS
 #######################################################################
 **/
 
+p.date { font-weight: bold; 
+       }
+
 .post-event-hero {
   background: #f9f8f6;
 }
