--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4004,6 +4004,8 @@ SEARCH RESULTS
 .search-results-content {
   color: #89898e;
   margin: 2px 0 0 0;
+  line-height: 1.875rem;
+  font-size: 1.125rem;
   .highlight>strong {
     background: #ffff9b;
     font-weight: 400;
