--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4171,5 +4171,5 @@ margin-top: .5em;
 margin-bottom: .5em;
 }
 
-.search_instruction { padding-top: 1em; color: #8ccbfe;
+.search_instruction { padding-top: 1em; color: #8ccbfe; font-size: 1.125rem;
 		     }
