--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -78,7 +78,7 @@
               <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12">
                 <div class="content">
 
-                  <%= @resource.main.try(:html_safe) %>
+                  <%= @resource.main %>
 
                 </div>
               </div>
