format changes for contributors

--- a/app/views/resources/_author_hero.html.erb
+++ b/app/views/resources/_author_hero.html.erb
@@ -7,7 +7,7 @@
 			<div class="breadcrumbs">
 			    <ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/items/authors">Contributors</a></li>
+				<li><a href="/items/contributors">Contributors</a></li>
 				<li class="active"> <%= @author.first_name %> <%= @author.last_name %></li>
 				
 			    </ul>
